--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@using WebApp.Models
 @model OverviewModel
+<div class="real-based"></div>
 <h1>Hello!</h1>
 <h4>The WoW Token currently Costs @Model.WoWTokenData.price</h4>
 <div id="affix-container" style="text-align: left;">
@@ -19,4 +20,4 @@
             }
         }
     }
-</div>
+    </div>
