--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - WebApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - WebApp - <a class="link-info" target="_blank" href="https://github.com/ArjanDeo/WhatChores"> Github</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
