--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                         <li class="nav-item">
                             <a class="btn" id="btnSwitch">Change Theme</a>
                         </li>                      
-                    </ul>                  
+                    </ul>
                     @* <button type="button" class="btn btn-primary">Login with OAuth</button> *@
 
                 </div>
@@ -49,7 +49,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - WebApp - <a class="link-info" target="_blank" href="https://github.com/ArjanDeo/WhatChores"> Github</a>
+            &copy; 2023 - What Chores? - <a class="link-info" target="_blank" href="https://github.com/ArjanDeo/WhatChores"> Github</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
