--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -21,7 +21,7 @@ body {
   margin-bottom: 60px;
 }
 .affix-container {
-    display: flex; /**/
+    display: flex;
     justify-content: center;
     align-items: center;
 }
