Modified Theme Toggle.

--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -23,16 +23,16 @@
                 <div class="collapse navbar-collapse" id="navbarsExample04">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
                         <li class="nav-item">
-                            <a class="nav-link active" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" asp-controller="Home" asp-action="CharacterLookup">Character Lookup</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="CharacterLookup">Character Lookup</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" asp-controller="Home" asp-action="Privacy">API</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="API">API</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn" id="btnSwitch">Change Theme</a>
+                            <a class="nav-link" style="cursor:pointer;" id="toggleThemeBtn">Change Theme</a>
                         </li>                      
                     </ul>
                     @* <button type="button" class="btn btn-primary">Login with OAuth</button> *@
