--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -26,10 +26,10 @@
                             <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Home" asp-action="CharacterLookup">Character Lookup</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="CharacterLookup">Search for Character</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Home" asp-action="API">API</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Api">API</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" style="cursor:pointer;" id="toggleThemeBtn">Change Theme</a>
