--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -44,3 +44,6 @@ body {
 .real-based {
     background-image: url(~/assets/images/dragonflight_alexstrasza.jpeg)
 }
+.classDiv h1 a {
+    text-decoration:none;
+}
