Added a Web API for public access to information from database.

--- a/WebApp/Views/Home/API.cshtml
+++ b/WebApp/Views/Home/API.cshtml
@@ -1,4 +1,4 @@
 ﻿<h1>API Usage</h1>
 
 <h4>This Website makes use of the <a class="link-primary" href="https://raider.io/api" target="_blank">Raider.IO</a> and <a class ="link-primary" href="https://develop.battle.net/" target="_blank">Battle.Net</a> API's.</h4>
-<p>Our own API is still in the making, but will be coming out soon!</p>
+<p>Our own API is now released! Documentation can be found <a class="link-primary" href="https://localhost:7031/swagger/index.html">here</a>!</p>
