--- a/WebApp/Views/Home/CharacterLookup.cshtml
+++ b/WebApp/Views/Home/CharacterLookup.cshtml
@@ -20,13 +20,11 @@
                         @if (characterData.guild is not null)
                         {
                             <h1 class="d-inline-flex ml-md-2 ml-sm-0">&lt;@characterData.guild.name&gt;</h1>
-                            <br />
                         }
                         <h1 class="d-inline-flex ml-md-2 ml-sm-0">@characterData.active_spec_name @characterData.char_class</h1>
-                        <br />
                         <img style="display: inline-block; margin-left: 10px" src="@characterData.thumbnail_url" />
                     </a>
-        @if (raidData.summary is not "0/9 N") {
+        @if (raidData.summary != "0/9 N") {
             <h2>
             @if (normalBossesKilled is not 0)
             {
@@ -125,7 +123,7 @@
     </div>
 }
 
-    else if (Model != null && Model.FailedToGetCharacter)
+            else if (Model != null && Model.SuccessfullyRetrievedCharacter)
     {
         <p>Couldn't find your character!</p>
         <p>Make sure that you entered the correct name/realm combination and that your character has been scanned by <a href="https://raider.io" target="_blank">raider.io</a></p>
