--- a/BlazorApp/Components/Pages/Character.razor
+++ b/BlazorApp/Components/Pages/Character.razor
@@ -2,8 +2,6 @@
 @inject IAppCache cache;
 @inject FluentClient client;
 
-
-
 @if (dataLoaded)
 {
     if (!characterLookupModel.SuccessfullyRetrievedCharacter)
@@ -12,32 +10,79 @@
         <p class="text-red-500 text-xl text-center">Failed to retrieve character. Please try again later.</p>
     } else {
 
-    var characterData = characterLookupModel.RaiderIOCharacterData;
-    if (characterLookupModel.RaiderIOCharacterData.raid_progression.amirdrassilthedreamshope != null)
-    {
-        var raidData = characterLookupModel.RaiderIOCharacterData.raid_progression.amirdrassilthedreamshope;
-        int normalBossesKilled = raidData.normal_bosses_killed;
-        int heroicBossesKilled = raidData.heroic_bosses_killed;
-        int mythicBossesKilled = raidData.mythic_bosses_killed;
-    }
+        var characterData = characterLookupModel.RaiderIOCharacterData;
+    
     var mythicPlusData = characterLookupModel.RaiderIOCharacterData.mythic_plus_weekly_highest_level_runs;
     var top8Dungeons = characterLookupModel.DungeonVaultSlots.Take(8).ToList();
     <PageTitle>@characterData.name</PageTitle>
-    <div style="color:@characterLookupModel.classColor" class="flex justify-center items-center pt-5 flex-wrap">
-        <img class="" src="@characterData.thumbnail_url" />
-        <h1 class="text-2xl pl-2">
-            <a href="@(characterData.profile_url)" target="_blank" class="hover:text-inherit">
-                @(characterData.name)
-            </a>
-            <br />
-                @if (characterData.guild != null)
-                {
-                    <a href="@($"https://worldofwarcraft.blizzard.com/en-us/guild/{characterData.region}/{characterData.guild.realm}/{characterData.guild.name}")" target="_blank" class="hover:text-inherit">&lt;@(characterData.guild.name
-            )&gt;</a>
-                }
-        </h1>
-        <h2 class="text-xl md:pl-28 pt-1 text-center w-full">Item Level @characterData.gear.item_level_equipped @characterData.active_spec_name @characterData.char_class</h2>
-    </div>
+
+        <div style="color:@characterLookupModel.classColor" class="flex justify-center items-center pt-5 flex-wrap">
+            <div class="max-w-md mx-auto bg-slate-800 rounded-xl shadow-md overflow-hidden md:max-w-2xl">
+                <div class="md:flex">
+                    <div class="md:shrink-0">
+                        <img class="h-32 w-full object-cover md:h-full md:w-48" src="@characterData.thumbnail_url" alt="Modern building architecture">
+                    </div>
+                    <div style="color:@characterLookupModel.classColor" class="p-8">
+                        <div class="uppercase tracking-wide text-sm font-semibold">@characterData.name <a>&lt;@characterData.guild.name&gt;</a></div>
+                        <a href="#" class="block mt-1 text-lg leading-tight font-medium text-inherit hover:underline">Item Level @characterData.gear.item_level_equipped @characterData.active_spec_name @characterData.char_class</a>
+                        @if (characterData.raid_progression.amirdrassilthedreamshope != null) {
+                            <p class="mt-2 text-inherit">Raid Progress: @characterData.raid_progression.amirdrassilthedreamshope.summary</p>
+                        } else
+                        {
+                            <p class="mt-2 text-inherit">No Raid Data</p>
+
+                        }
+                        @foreach (var x in characterData.mythic_plus_scores_by_season)
+                        {
+                            <p class="mt-2 text-inherit">M+ Score: @x.scores.all</p>
+                        }
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="text-slate-400">
+            <h1 class="text-xl text-center text-inherit mt-5">Vault:</h1>
+            <div class="overflow-x-auto">
+                <table class="min-w-full bg-slate-900">
+                    <thead>
+                        <tr>
+                            <th class="px-6 py-3 border-b border-slate-600 text-left leading-4 text-inherit">Type</th>
+                            <th class="px-6 py-3 border-b border-slate-600 text-left leading-4 text-inherit">Defeat 2 Bosses</th>
+                            <th class="px-6 py-3 border-b border-slate-600 text-left leading-4 text-inherit">Defeat 4 Bosses</th>
+                            <th class="px-6 py-3 border-b border-slate-600 text-left leading-4 text-inherit">Defeat 7 Bosses</th>
+                        </tr>
+                    </thead>
+                    <tbody class="divide-y divide-slate-600">
+                        <tr>
+                            <td class="px-6 py-4 whitespace-no-wrap">Raids</td>
+                            @if (characterData.raid_progression.amirdrassilthedreamshope != null && characterData.raid_progression.amirdrassilthedreamshope.heroic_bosses_killed < 9) { 
+                                <td class="px-6 py-4 whitespace-no-wrap text-green-600">Defeat 2 Amirdrassil, the Dream's Hope Bosses</td>
+                                <td class="px-6 py-4 whitespace-no-wrap text-green-600">Defeat 4 Amirdrassil, the Dream's Hope Bosses</td>
+                                <td class="px-6 py-4 whitespace-no-wrap text-green-600">Defeat 7 Amirdrassil, the Dream's Hope Bosses</td>
+                            } else
+                            {
+                                <td class="px-6 py-4 whitespace-no-wrap text-red-600">Defeat 2 Amirdrassil, the Dream's Hope Bosses</td>
+                                <td class="px-6 py-4 whitespace-no-wrap text-red-600">Defeat 4 Amirdrassil, the Dream's Hope Bosses</td>
+                                <td class="px-6 py-4 whitespace-no-wrap text-red-600">Defeat 7 Amirdrassil, the Dream's Hope Bosses</td>
+                            }
+                        </tr>
+                        <tr>
+                            <td class="px-6 py-4 whitespace-no-wrap">Dungeons</td>
+                            <td class="px-6 py-4 whitespace-no-wrap">Complete 1 Heroic, Mythic or Timewalking Dungeon</td>
+                            <td class="px-6 py-4 whitespace-no-wrap">Complete 4 Heroic, Mythic or Timewalking Dungeons</td>
+                            <td class="px-6 py-4 whitespace-no-wrap">Complete 8 Heroic, Mythic or Timewalking Dungeons</td>
+                        </tr>
+                        <tr>
+                            <td class="px-6 py-4 whitespace-no-wrap">PvP</td>
+                            <td class="px-6 py-4 whitespace-no-wrap">Earn 1250 Honor from Rated PvP</td>
+                            <td class="px-6 py-4 whitespace-no-wrap">Earn 2500 Honor from Rated PvP</td>
+                            <td class="px-6 py-4 whitespace-no-wrap">Earn 5000 Honor from Rated PvP</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+        </div>
     }    
 }
 
@@ -50,7 +95,7 @@
     [Parameter]
     public string name { get; set; }
 
-    public CharacterLookupModel characterLookupModel = new();
+    public CharacterLookupModel characterLookupModel;
     public bool dataLoaded;
 
     public class KeyItemLevel
@@ -58,11 +103,9 @@
         public int KeyLevel { get; set; }
         public int ItemLevel { get; set; }
     }
-    //  private readonly FluentClient client;
 
     public Character()
-    {
-        cache = new CachingService();
+    {     
         client = new();
         characterLookupModel = new();
     }
@@ -72,101 +115,23 @@
     }
 
     private async Task<CharacterLookupModel> GetCharacterAsync()
-    {
-        string cacheKey = $"GetCharacter_{name}_{realm}";
-
-        return await cache.GetOrAddAsync(cacheKey, async () =>
+    {       
+        try
         {
-            try
-            {
-                RaiderIOCharacterDataModel ResponseData = await client
-               .GetAsync("https://raider.io/api/v1/characters/profile")
-               .WithArgument("region", "us")
-               .WithArgument("name", name)
-               .WithArgument("realm", realm.Replace(" ", "-"))
-               .WithArgument("fields", "raid_progression,mythic_plus_weekly_highest_level_runs,guild,gear")
-               .As<RaiderIOCharacterDataModel>();
+            CharacterLookupModel ResponseData = await client
+            .GetAsync("https://localhost:7031/api/v1/general/charData")
+            .WithArgument("name", name)            
+            .WithArgument("region", "us")
+            .WithArgument("realm", realm)
+            .As<CharacterLookupModel>();
 
-                Dictionary<string, string> KeysData = await client
-                    .GetAsync("https://localhost:7031/api/v1/mythicplus/keystone-vault-reward")
-                    .As<Dictionary<string, string>>();
-                var dictionary = new Dictionary<int, int>();
-                foreach (var kvp in KeysData)
-                {
-                    dictionary.Add(int.Parse(kvp.Key), int.Parse(kvp.Value));
-                }
-             
-                characterLookupModel.MythicKeystoneValues = dictionary;
-                characterLookupModel.RaiderIOCharacterData = ResponseData;
+            dataLoaded = true;
 
-                List<int> intList = await GetDungeonVaultSlots(ResponseData, characterLookupModel.MythicKeystoneValues);
-                characterLookupModel.DungeonVaultSlots = intList;
-
-                string color = await GetClassColor();
-                characterLookupModel.classColor = color;
-
-                characterLookupModel.SuccessfullyRetrievedCharacter = true;
-                dataLoaded = true;
-
-                return characterLookupModel;
-            }
-            catch
-            {
-                characterLookupModel.SuccessfullyRetrievedCharacter = false;
-                dataLoaded = true;
-                return characterLookupModel;
-            }
-
-        }, TimeSpan.FromMinutes(15));
-    }
-    public class ClassNameColor
-    {
-        public string ClassName { get; set; }
-        public string ClassColor { get; set; }
-    }
-    private static Task<List<int>> GetDungeonVaultSlots(RaiderIOCharacterDataModel characterData, Dictionary<int, int> mythicKeystoneValues)
-    {
-        List<int> intList = [];
-
-        foreach (var run in characterData.mythic_plus_weekly_highest_level_runs)
+            return ResponseData;
+        } catch (Exception ex)
         {
-            if (mythicKeystoneValues.TryGetValue(run.mythic_level, out int value))
-            {
-                intList.Add(value);
-            }
-            else if (run.mythic_level > 20)
-            {
-                // If the key level is greater than 20, assign the maximum score
-                intList.Add(mythicKeystoneValues[20]);
-            }
+            throw new Exception(ex.Message);
         }
-
-        intList = [.. intList.OrderByDescending(x => x)];
-
-        return Task.FromResult(intList);
-    }
-    private async Task<string> GetClassColor()
-    {
-        //  Dictionary<string, string> classMap = await _context.tbl_ClassData.ToDictionaryAsync(i => i.ClassName, i => i.ClassColor);
-        List<ClassNameColor> classMap = await client
-      .GetAsync("https://localhost:7031/api/v1/general/class?getColor=true")
-      .As<List<ClassNameColor>>();
-
-        string classNameToFind = characterLookupModel.RaiderIOCharacterData.char_class;
-        string color = "black"; // Default color if not found
-
-        // Iterate through the list to find the matching class name
-        foreach (var item in classMap)
-        {
-            if (item.ClassName == classNameToFind)
-            {
-                color = item.ClassColor; // Assign the color if the class name is found
-                break; // Exit the loop once the match is found
-            }
-        }
-
-
-
-        return color;
-    }
+        
+    }   
 }
